syntax = "proto3";

package disql;  // Replace 'mypackage' with your actual package name

option go_package = "/disql";

service Participant {
    rpc Prepare (PrepareRequest) returns (PrepareResponse);
    rpc Commit (CommitRequest) returns (CommitResponse);
    rpc RollBack (RollBackRequest) returns (RollBackResponse);
    rpc NewConnection (NewConnectionRequest) returns (NewConnectionResponse);
}

message PrepareRequest {
    string cmd_id =1;
    string cmd = 2;
}
message PrepareResponse {
    bool success = 1;
}

message CommitRequest{
    string cmd_id =1;
}
message CommitResponse{
    bool success =1;
}

message RollBackRequest {
    string cmd_id =1;
}
message RollBackResponse{
    bool success = 1;
}

message NewConnectionRequest{
    string url =1;
}
message NewConnectionResponse{
    bool success =1;
}